cmake_minimum_required(VERSION 3.12)
project(CppPrimerPlus)

set(CMAKE_CXX_STANDARD 11)

add_executable(CppPrimerPlus main.cpp OOP/stock00.h OOP/stock00.cpp OOP/stack.h OOP/stack.cpp OOP/mytime0.h OOP/mytime0.cpp OOP/mytime1.h OOP/mytime1.cpp main1.cpp)

#add_executable(CppPrimerPlus main1.cpp OOP/mytime1.h OOP/mytime1.cpp)